Bug fixes: button overflow, remove duplicate index & fix timer, trim userodds, update readme
1. remove duplicate index.js... now that we have index.tsx
2. add & typescript-ify timer in index.tsx
3. fix overflow style for withdraw button
4. trim userOdds in display on withdraw & deposit
5. update README to reflect faucet directions

--- a/src/views/33Together/33together.scss
+++ b/src/views/33Together/33together.scss
@@ -53,15 +53,13 @@
 }
 
 :not(.mobile) .pool-deposit-button,
-:not(.mobile) .pool-withdraw-button,
 .pool-start-award-button,
 .pool-complete-award-button {
   width: 200px;
   min-width: 200px;
 }
 
-.mobile .pool-deposit-button,
-.mobile .pool-withdraw-button {
+.mobile .pool-deposit-button {
   max-width: 100% !important;
   width: 100%;
 }
